src/libqlineedit.h

typedef struct QLineEdit QLineEdit;
libqt_string QLineEdit_Tr2(const char* s, const char* c);
libqt_string QLineEdit_Tr3(const char* s, const char* c, int n);
void QLineEdit_CursorForward2(QLineEdit* self, bool mark, int steps);
void QLineEdit_CursorBackward2(QLineEdit* self, bool mark, int steps);