src/qt/libqlineedit.bf

	[LinkName("QLineEdit_Tr2")]
	public static extern libqt_string QLineEdit_Tr2(char8[] s, char8[] c);
	[LinkName("QLineEdit_Tr3")]
	public static extern libqt_string QLineEdit_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QLineEdit_CursorForward2")]
	public static extern void QLineEdit_CursorForward2(Self* c_this, bool mark, int32 steps);
	[LinkName("QLineEdit_CursorBackward2")]
	public static extern void QLineEdit_CursorBackward2(Self* c_this, bool mark, int32 steps);
}